@@ -570,38 +570,38 @@ pk_cmd_nbd (int argc, struct pk_cmd_arg argv[], uint64_t uflags)
 #endif /* HAVE_LIBNBD */
 
 const struct pk_cmd ios_cmd =
-  {"ios", "s", "", 0, NULL, NULL, pk_cmd_ios, "ios IOS", poke_completion_function};
+  {"ios", "s", "", 0, NULL, NULL, pk_cmd_ios, ".ios IOS", poke_completion_function};
 
 const struct pk_cmd file_cmd =
-  {"file", "f", PK_FILE_UFLAGS, 0, NULL, NULL, pk_cmd_file, "file FILE-NAME",
+  {"file", "f", PK_FILE_UFLAGS, 0, NULL, NULL, pk_cmd_file, ".file FILE-NAME",
    rl_filename_completion_function};
 
 const struct pk_cmd proc_cmd =
-  {"proc", "i", PK_PROC_UFLAGS, 0, NULL, NULL, pk_cmd_proc, "proc PID", NULL};
+  {"proc", "i", PK_PROC_UFLAGS, 0, NULL, NULL, pk_cmd_proc, ".proc PID", NULL};
 
 const struct pk_cmd sub_cmd =
-  {"sub", "s,i,i,?s", "", 0, NULL, NULL, pk_cmd_sub, "sub IOS, BASE, SIZE, [NAME]",
+  {"sub", "s,i,i,?s", "", 0, NULL, NULL, pk_cmd_sub, ".sub IOS, BASE, SIZE, [NAME]",
    poke_completion_function};
 
 const struct pk_cmd mem_cmd =
-  {"mem", "s", "", 0, NULL, NULL, pk_cmd_mem, "mem NAME", NULL};
+  {"mem", "s", "", 0, NULL, NULL, pk_cmd_mem, ".mem NAME", NULL};
 
 #ifdef HAVE_LIBNBD
 const struct pk_cmd nbd_cmd =
-  {"nbd", "s", "", 0, NULL, NULL, pk_cmd_nbd, "nbd URI", NULL};
+  {"nbd", "s", "", 0, NULL, NULL, pk_cmd_nbd, ".nbd URI", NULL};
 #endif
 
 const struct pk_cmd close_cmd =
   {"close", "s", "", PK_CMD_F_REQ_IO, NULL, NULL, pk_cmd_close,
-   "close [IOS]", poke_completion_function};
+   ".close [IOS]", poke_completion_function};
 
 const struct pk_cmd info_ios_cmd =
-  {"ios", "", "", 0, NULL, NULL, pk_cmd_info_ios, "info ios", NULL};
+  {"ios", "", "", 0, NULL, NULL, pk_cmd_info_ios, ".info ios", NULL};
 
 const struct pk_cmd load_cmd =
-  {"load", "f", "", 0, NULL, NULL, pk_cmd_load_file, "load FILE-NAME",
+  {"load", "f", "", 0, NULL, NULL, pk_cmd_load_file, ".load FILE-NAME",
    rl_filename_completion_function};
 
 const struct pk_cmd source_cmd =
   {"source", "f", "", 0, NULL, NULL, pk_cmd_source_file,
-   "source FILE-NAME", rl_filename_completion_function};
+   ".source FILE-NAME", rl_filename_completion_function};
