@@ -1,5 +1,14 @@
 2023-11-02  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-cmd-ios.c: Prepend . to dot-command Usage messages.
+	* poke/pk-cmd-compiler.c: Likewise.
+	* poke/pk-cmd-def.c: Likewise.
+	* poke/pk-cmd-set.c: Likewise.
+	* poke/pk-cmd-map.c: Likewise.
+	* poke/pk-cmd-vm.c: Likewise.
+
+2023-11-02  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-cmd-ios.c (sub_cmd): Use poke_completion_function.
 
 2023-11-02  Jose E. Marchesi  <jemarch@gnu.org>
